update: 処理を最新化